--- a/looking_to_stay/user_profile/templates/user_profile/profile.html
+++ b/looking_to_stay/user_profile/templates/user_profile/profile.html
@@ -23,6 +23,7 @@
     </div> {% endcomment %}
 
     </div>
+    <hr class="hr-text" data-content="Looking2Stay">
 <h1 class="reservations center"> My Reservations</h1>
 </div>
 {% endblock content %}
