--- a/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/base.css
+++ b/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/base.css
@@ -273,3 +273,37 @@ h1.reservations {
     background-color: rgba(252, 214, 160, 0.815);;
     cursor: pointer;
 }
+
+.hr-text {
+	line-height: 1em;
+	position: relative;
+	outline: 0;
+	border: 0;
+	color: black;
+	text-align: center;
+	height: 1.5em;
+	opacity: .7;
+}
+.hr-text:before {
+	content: '';
+	background: -webkit-linear-gradient(left, transparent, rgba(251, 231, 202, 0.815), transparent);
+	background: linear-gradient(to right, transparent, rgba(251, 231, 202, 0.815), transparent);
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 100%;
+	height: 4px;
+}
+.hr-text:after {
+	content: attr(data-content);
+	position: relative;
+	display: inline-block;
+  font-weight: 900;
+	color: black;
+	padding: 0 .5em;
+	line-height: 1.5em;
+	color: #000000;
+	background-color: rgba(251, 231, 202, 0.815);;
+  border-radius: 15px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
