--- a/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
+++ b/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
@@ -63,3 +63,81 @@
   border-radius: 10px;
   box-shadow: 0 0 40px rgba(8,7,16,0.6);
 }
+
+.hr-text {
+	line-height: 1em;
+	position: relative;
+	outline: 0;
+	border: 0;
+	color: black;
+	text-align: center;
+	height: 1.5em;
+	opacity: .7;
+}
+.hr-text:before {
+	content: '';
+	background: -webkit-linear-gradient(left, transparent, rgba(251, 231, 202, 0.815), transparent);
+	background: linear-gradient(to right, transparent, rgba(251, 231, 202, 0.815), transparent);
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 100%;
+	height: 4px;
+}
+.hr-text:after {
+	content: attr(data-content);
+	position: relative;
+	display: inline-block;
+  font-weight: 900;
+	color: black;
+	padding: 0 .5em;
+	line-height: 1.5em;
+	color: #000000;
+	background-color: rgba(251, 231, 202, 0.815);;
+  border-radius: 15px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+ul.rooms li {
+  list-style: none;
+  background-color: rgba(251, 231, 202, 0.815);;
+  padding: 2rem;
+  color: rgb(70, 39, 0);
+  border: 2px solid rgba(255,255,255,0.1);
+  border-radius: 10px;
+  box-shadow: 0 0 40px rgba(8,7,16,0.6);
+  margin-left: -2.4rem;
+  max-width: 100%;
+  /* display: flex;
+  flex-direction: row; */
+  
+}
+/* 
+button.roombtn {
+  border: none;
+  float: right;
+  padding: 1rem;
+  margin-top: -1rem;
+  border-radius: 10px;
+  background-color: rgba(251, 231, 202, 0.815);;
+  border: 2px solid rgba(255,255,255,0.1);
+  border-radius: 10px;
+  box-shadow: 0 0 40px rgba(8,7,16,0.6);
+  font-weight: 600;
+  color: rgb(70, 39, 0);
+}
+
+button.roombtn:hover {
+  background-color: rgba(203, 161, 89, 0.5); ;
+  cursor: pointer;
+}
+
+ul.rooms li p {
+  display: inline;
+  
+} */
+
+.room_img {
+  max-width: 50px;
+  margin-right: 2rem;
+}
