--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -62,6 +62,7 @@
             <td><button class="roombtn" ><a href="{% url 'reservation' %}">Make a Reservation</a></button></td>
         </tr>
     {% endfor%}
+    </table>
 </div>
 
 {% endblock content%}
