--- a/looking_to_stay/user_profile/templates/registration/password_reset_done.html
+++ b/looking_to_stay/user_profile/templates/registration/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends 'registration/loginbase.html'%}
 {% load static %}
-{% block title %} Register - {{ block.super }}{% endblock title %}
+{% block title %} Password Reset - {{ block.super }}{% endblock title %}
 {% block content %}
 <form class="reset">
     <h3>Password Reset</h3>
