--- a/looking_to_stay/user_profile/templates/registration/password_reset_confirm.html
+++ b/looking_to_stay/user_profile/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends 'registration/loginbase.html'%}
 {% load static %}
-{% block title %} Reset Password - {{ block.super }}{% endblock title %}
+{% block title %} Password Reset - {{ block.super }}{% endblock title %}
 {% block content %}
 <form class="passwordreset" action="" method="post">
     <h3>Password Reset</h3>
