--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/about_us.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/about_us.html
@@ -2,5 +2,35 @@
 {% load static %}
 {% block title %} About us - {{ block.super }}{% endblock title %}
 {% block content%}
-
+<h1 class="center">About Us</h1>
+<div class="window">
+    <div class="center">
+        <p> Founded in 2022 in London, lookingtostay.com has been started as digital reservation company<br>
+            with a potential to become one of the best. It's founder Holiday Holdings Inc. mission is to<br>
+            make it easier for everyone to experience the world.
+        </p>
+        <p>
+            By investing in the technology that helps take the friction out of reservations, lookingtostay<br>
+            seamlessly connects travellers with memorable experiences and incredible places to stay.<br>
+            From homes to hotels and so much more! As a global marketplace for brands and entrepreneurs<br>
+            of all sizes, lookingtostay enables properties form all over the world to reach a global<br>
+            audience and grow their business.
+        </p>
+        <p>
+    </div>
+</div>
+<hr class="hr-text" data-content="lookingtostay">
+<h1 class="center">📝 Contact Us</h1>
+<div class="contact-window">
+    <div class="center">
+        <p class="uni">&#9742;</p>
+        <p class="contact">+447507504896</p>
+        <p class="uni">&#128231;</p>
+        <p class="contact">management@l2s.com</p>
+        <p class="uni">&#128204;</p>
+        <p class="contact">12 Wardour St,</p>
+        <p class="contact">W1D 6QF London</p>
+        <p class="contact">United Kingdom</p>
+    </div>
+</div>
 {% endblock content%}
