--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -58,7 +58,7 @@
             <th></th>
             <th>Room Type</th>
             <th>People</th>
-            <th>Total Price</th>
+            <th>Price per Night</th>
             <th></th>
         </tr>
     {% for room in object.room_types.all %}
